# ray-tracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: bbox.h  bvh.h  camera.h  intersection.h  main.cpp  material.h  object.h  ray.h  scene.h  sphere.h  texture.h  triangle.h  utils.h  vector.h  vector3.h
